Implantação de Estoque, testes = funcionando
